# opencv-webcam-display

./: ,gitignore  .gitmodules  CMakeLists.txt  README.md
camera_app/: main.cpp
